Placed Camera , implemented Checkout Screen - i.e :  PaymentViewController

--- a/GullyTrends/Info.plist
+++ b/GullyTrends/Info.plist
@@ -33,6 +33,8 @@
 	<string>GullyTrendz</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Access Camera</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
